# generate-meeeting-minutes

./: .gitignore  README.md  config.py  main.py  pyproject.toml
